# kitsu.rs

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
examples/01_reqwest/: Cargo.toml
examples/01_reqwest/src/: main.rs
examples/02_hyper/: Cargo.toml
examples/02_hyper/src/: main.rs
src/: builder.rs  error.rs  lib.rs  model.rs
src/bridge/: hyper.rs  reqwest.rs
tests/: test_hyper_support.rs  test_reqwest_support.rs
