[package]
authors = ["Mei Boudreau <xanizl@me.com>", "Zeyla Hellyer <zey@zey.moe>"]
name = "kitsu_io"
version = "0.2.0"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dependencies.futures]
optional = true
version = "~0.1"

[dependencies.hyper]
optional = true
version = "~0.11"

[dependencies.reqwest]
optional = true
version = "~0.8"

[dev-dependencies]
hyper-tls = "~0.1"
tokio-core = "~0.1"

[features]
default = ["reqwest-support"]
hyper-support = ["futures", "hyper"]
reqwest-support = ["reqwest"]
