[package]
authors = ["Zeyla Hellyer <zeylahellyer@gmail.com>"]
categories = ["api-bindings", "web-programming"]
description = "Unofficial Rust HTTP client implementations for the Kitsu API."
documentation = "https://docs.rs/kitsu"
homepage = "https://github.com/zeyla/kitsu"
keywords = ["api", "http", "kitsu"]
license = "ISC"
name = "kitsu"
repository = "https://github.com/zeyla/kitsu.rs.git"
version = "0.2.0"

[badges.maintenance]
status = "actively-developed"

[dependencies]
percent-encoding = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dependencies.futures]
optional = true
version = "0.1"

[dependencies.http]
optional = true
version = "0.1"

[dependencies.hyper]
optional = true
version = "0.12"

[dependencies.reqwest]
optional = true
version = "0.9"

[dev-dependencies]
hyper-rustls = "0.16"
tokio = "0.1"

[features]
default = ["reqwest-support"]
hyper-support = ["futures", "http", "hyper"]
reqwest-support = ["reqwest"]
